# ENSI

./: .dockerignore  .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
docker/: Dockerfile.linux20
docs/: HAND_TRACKING_BUILD_PLAN.md  HAND_TRACKING_SPEC.md  REQUIREMENTS.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: app_state.dart  cert_service.dart  control_router.dart  discovery_service.dart  identity.dart  layout_manager.dart  layout_store.dart  pairing.dart  protocol.dart  session.dart  transport.dart  trust_store.dart
lib/hand/: cursor_mapper.dart  gesture.dart  hand_tracker.dart  hand_tracker_impl.dart  landmark_source.dart  landmarks.dart  mediapipe_bridge.dart  one_euro_filter.dart
lib/input/: hand_input_source.dart  input_backend.dart  keymap.dart  linux_x11_backend.dart  stub_backend.dart  windows_backend.dart
lib/models/: device.dart  input_event.dart  peer.dart
lib/ui/: device_list.dart  hand_control_tile.dart  home_screen.dart  layout_editor.dart  pairing_dialog.dart  trusted_devices_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
native/handbridge/: CMakeLists.txt  README.md
native/handbridge/include/: handbridge.h
native/handbridge/src/: handbridge.cc
scripts/: build_on_ubuntu.sh  install.ps1  install.sh  wsl_appimage.sh  wsl_build_linux.sh  wsl_repackage.sh
test/: widget_test.dart
test/core/: cert_service_test.dart  (+9 more)
tool/: verify_capture.dart  verify_inject.dart
windows/: CMakeLists.txt
(+17 files in other folders)
